# PythonProject

./: .env  .gitignore  alembic.ini  main.py  pyproject.toml
app/: bot.py  crud.py  db.py  main.py  models.py  routers.py  schemas.py
app/config/: config.py  jwt_settings.py
app/crud/: clothes_crud.py  crud.py  crud_bot.py
app/middleware/: jwt_based_auth.py
app/routers/: clothes_router.py  user_routers.py
app/schemas/: auth_schemas.py  clothes_schemas.py  user_roles_schemes.py  user_schemas.py
app/settings/: __init__.py  settings.py
migrations/: env.py
migrations/versions/: 24763fe24a3b_added_roles.py  2d68d85b1a80_initial_2.py  5689074f00c6_add_readers.py  78836677d34e_baseline.py  a5799e23b8d8_initial_schema.py  c81680d47b88_many_to_many.py  fb73446f6786_initial.py  fc8b4f564369_initial_schema.py
tests/: test_users.py  tests_users.py
